--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,44 +8,156 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <main>
         <header>
-            <h1>Botões com Java Script</h1>
+            <h1 class="titulo">Blocos com função</h1>
         </header>
         <section>
-            <div class="button-block">
-                <p>Botao 1</p>
+            <div class="border">
+                <article class="button-block" id="a1">
+                    <div class="top-right"></div>
+                    <div class="bot-left"></div>
+                    <p>Alterar Background</p>
+                    <div class="button-area">
+                        <button class="b-1" id="btLight"></button>
+                        <button class="b-1" id="btGray"></button>
+                        <button class="b-1" id="btDark"></button>
+                        <button class="b-1" id="btLD"></button>
+                        <button class="b-1" id="btRed"></button>
+                        <button class="b-1" id="btOrange"></button>
+                        <button class="b-1" id="btYellow"></button>
+                        <button class="b-1" id="btRY"></button>
+                        <button class="b-1" id="btGreen"></button>
+                        <button class="b-1" id="btAquaGreen"></button>
+                        <button class="b-1" id="btCyan"></button>
+                        <button class="b-1" id="btGC"></button>
+                        <button class="b-1" id="btTurquoise"></button>
+                        <button class="b-1" id="btBlue"></button>
+                        <button class="b-1" id="btRoxao"></button>
+                        <button class="b-1" id="btTR"></button>
+                        <button class="b-1" id="btPurple"></button>
+                        <button class="b-1" id="btPink"></button>
+                        <button class="b-1" id="btMagenta"></button>
+                        <button class="b-1" id="btPM"></button>
+                    </div>
+                </article>
             </div>
-            <div class="button-block">
-                <p>Botao 2</p>
+            <div class="border">
+                <article class="button-block" id="a1">
+                    <div class="top-right"></div>
+                    <div class="calcArea">
+                        <div class="calcOrImc" id="escolha1">
+                            <button id="btCalc">Calculadora</button>
+                            <button id="btCalcImc">Calculadora IMC</button>
+                        </div>
+
+                        <div class="calc" id="calcJs">
+                            <div class="areaShortCurt">
+                                <button class="btnShortCurt" id="calcBack">Voltar</button>
+                                <button class="btnShortCurt" id="skipImc">Imc</button>
+                            </div>
+                        </div>
+
+                        <div class="calcImc" id="calcImcJs">
+                            <div class="areaShortCurt">
+                                <button class="btnShortCurt" id="calcBackImc">Voltar</button>
+                                <button class="btnShortCurt" id="skipImc">Calculadora</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bot-left"></div>
+                </article>
             </div>
-            <div class="button-block">
-                <p>Botao 3</p>
             </div>
-            <div class="button-block">
-                <p>Botao 4</p>
+            <div class="border">
+                <article class="button-block" id="a1">
+                    <div class="top-right"></div>
+                    <div class="b-area"></div>
+                    <p>Alterar Background</p>
+                    <div class="bot-left"></div>
+                </article>
             </div>
-            <div class="button-block">
-                <p>Botao 4</p>
+            <div class="border">
+                <article class="button-block" id="a1">
+                    <div class="top-right"></div>
+                    <div class="b-area"></div>
+                    <p>Alterar Background</p>
+                    <div class="bot-left"></div>
+                </article>
             </div>
-            <div class="button-block">
-                <p>Botao 4</p>
+            <div class="border">
+                <article class="button-block" id="a1">
+                    <div class="top-right"></div>
+                    <div class="b-area"></div>
+                    <p>Alterar Background</p>
+                    <div class="bot-left"></div>
+                </article>
             </div>
-            <div class="button-block">
-                <p>Botao 4</p>
+            <div class="border">
+                <article class="button-block" id="a1">
+                    <div class="top-right"></div>
+                    <div class="b-area"></div>
+                    <p>Alterar Background</p>
+                    <div class="bot-left"></div>
+                </article>
             </div>
-            <div class="button-block">
-                <p>Botao 4</p>
+            <div class="border">
+                <article class="button-block" id="a1">
+                    <div class="top-right"></div>
+                    <div class="b-area"></div>
+                    <p>Alterar Background</p>
+                    <div class="bot-left"></div>
+                </article>
             </div>
-            <div class="button-block">
-                <p>Botao 4</p>
+            <div class="border">
+                <article class="button-block" id="a1">
+                    <div class="top-right"></div>
+                    <div class="b-area"></div>
+                    <p>Alterar Background</p>
+                    <div class="bot-left"></div>
+                </article>
             </div>
-            
+            <div class="border">
+                <article class="button-block" id="a1">
+                    <div class="top-right"></div>
+                    <div class="b-area"></div>
+                    <p>Alterar Background</p>
+                    <div class="bot-left"></div>
+                </article>
+            </div>
+            <div class="border">
+                <article class="button-block" id="a1">
+                    <div class="top-right"></div>
+                    <div class="b-area"></div>
+                    <p>Alterar Background</p>
+                    <div class="bot-left"></div>
+                </article>
+            </div>
+            <div class="border">
+                <article class="button-block" id="a1">
+                    <div class="top-right"></div>
+                    <div class="b-area"></div>
+                    <p>Alterar Background</p>
+                    <div class="bot-left"></div>
+                </article>
+            </div>
+            <div class="border">
+                <article class="button-block" id="a1">
+                    <div class="top-right"></div>
+                    <div class="b-area"></div>
+                    <p>Alterar Background</p>
+                    <div class="bot-left"></div>
+                </article>
+            </div>
+
+
         </section>
 
     </main>
 
-    <script src="index.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
