--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
                             </div>
 
                             <div class="calculator">
-                                <p class="resultado" id="resultjs"></p>
+                                <div class="blockResult">
+                                    <p class="resultado" id="resultjs"></p>
+                                </div>
                                 <div class="tableCalc">
                                     <div class="numCalc">
                                         <button onclick="insertCalc('7')">7</button>
